test service et controller